--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -3,82 +3,82 @@
 {% block stylesheets %}
 	
     {{ parent() }}
-    
-    <style>
-    /* Grid */
-				.grid {
-				  position: relative;
-				}
-				
-				.item {
-				  display: block;
-				  position: absolute;
-				  width: 100px;
-				  height: 100px;
-				  margin: 5px;
-				  z-index: 1;
-				  background: #{{ my_function('PRIMARY_COLOR') }};
-				  color: #000000;
-				  border-radius: 6px;
-				}
-				
-				.item:hover {
-				  display: block;
-				  position: absolute;
-				  width: 100px;
-				  height: 100px;
-				  margin: 5px;
-				  z-index: 1;
-				  background: #{{ my_function('SECONDARY_COLOR') }};
-				  border-radius: 6px;
-				}
-				
-				.item.muuri-item-dragging {
-				  z-index: 3;
-				}
-				
-				.item.muuri-item-releasing {
-				  z-index: 2;
-				}
-				
-				.item.muuri-item-hidden {
-				  z-index: 0;
-				}
-				.item-content {
-				  position: relative;
-				  width: 100%;
-				  height: 100%;
-				}
-				
-				.item .icon {
-				  position: absolute;
-				  color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
-				  font-size: 42px;
-				  margin-top: -8px;
-				  margin-left: 2px;
-				  text-align: center;
-				}
-				
-				.item:hover .icon {
-				  color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
-				}
-				
-				.item .tile-label {
-				  position: absolute;
-				  color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
-				  bottom: 0;
-				  left: 2px;
-				  padding: 3px;
-				  z-index: 999;
-				  font-size: 12px;
-				  font-weight: 600;
-				  text-transform: uppercase;
-				}
-				
-				.item:hover .tile-label {
-				  color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
-				}
-    </style>
+
+	<style>
+	/* Grid Tiles*/
+	.grid {
+	position: relative;
+	}
+
+	.item {
+	position: absolute;
+	display: block !important;
+	width: 100px;
+	height: 100px;
+	margin: 5px;
+	background: #{{ my_function('PRIMARY_COLOR') }};
+	color: #000000;
+	border-radius: 6px;
+	}
+
+	.item:hover {
+	display: block;
+	width: 100px;
+	height: 100px;
+	margin: 5px;
+	background: #{{ my_function('SECONDARY_COLOR') }};
+	border-radius: 6px;
+	}
+
+	.item.muuri-item-dragging {
+	z-index: 3;
+	}
+
+	.item.muuri-item-releasing {
+	z-index: 2;
+	}
+
+	.item.muuri-item-hidden {
+	z-index: 0;
+	}
+	.item-content {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	}
+
+	.item .icon {
+	position: absolute;
+	color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
+	font-size: 42px;
+	margin-top: -8px;
+	margin-left: 2px;
+	text-align: center;
+	}
+
+	.item:hover .icon {
+	color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
+	}
+
+	.item .tile-label {
+	position: absolute;
+	color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
+	bottom: 0;
+	left: 2px;
+	padding: 3px;
+	z-index: 999;
+	font-size: 12px;
+	font-weight: 600;
+	text-transform: uppercase;
+	}
+
+	.item:hover .tile-label {
+	color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
+	}
+
+	</style>
+
+
 {% endblock %}
 
 {% block dashIcon %}
@@ -89,7 +89,7 @@
 
 	<!-- Buttons -->
 	<div class="row float-right top-buffer right-buffer">
-		<a href="{{ path('add_button') }}" class="button right-buffer"><i class="mdi mdi-pencil"></i></a>
+		<a href="" class="button right-buffer"><i class="mdi mdi-pencil"></i></a>
 		<a href="#" class="button"><i class="mdi mdi-cursor-move"></i></a>
 	</div>
 	<!-- End Buttons -->
@@ -98,24 +98,44 @@
 
 {% block body %}
 	<h2>{{ data.name }}</h2>
-	
+
 	<div class="grid">
 
+		{% for data in data.buttonsInDashboards %}
+
+				<div class="item">
+					<div class="item-content">
+						<!-- Safe zone, enter your custom markup -->
+						<span class="icon mdi {{ data.icon }}"></span>
+						<span class="tile-label">{{ data.name }}</span>
+						<!-- Safe zone ends -->
+					</div>
+				</div>
+
+		{% endfor %}
 
 
 
-		
-		
-	
-	</div>	
+	</div>
 	
 
 {% endblock %}
 
-{% block javascripts %}  
-	
+{% block javascripts %}
+
 	{{ parent() }}
-	
+
+	<script>
+		//Close alert after x seconds:
+		window.setTimeout(function () {
+			$(".alert").fadeTo(500, 0).slideUp(500, function () {
+				$(this).remove();
+			});
+		}, 4000);
+
+
+		var grid = new Muuri('.grid');
+	</script>
 {% endblock %}
 
 
