--- a/templates/base-styles.html.twig
+++ b/templates/base-styles.html.twig
@@ -60,4 +60,130 @@
         content: "*";
         color: red;
     }
+
+    /* Grid Tiles*/
+    .grid {
+        position: relative;
+    }
+
+    .item {
+        position: absolute;
+        display: block !important;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+        background: #{{ my_function('PRIMARY_COLOR') }};
+        color: #000000;
+        border-radius: 6px;
+    }
+
+    .item:hover {
+        display: block;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+        background: #{{ my_function('SECONDARY_COLOR') }};
+        border-radius: 6px;
+    }
+
+    .item.muuri-item-dragging {
+        z-index: 3;
+    }
+
+    .item.muuri-item-releasing {
+        z-index: 2;
+    }
+
+    .item.muuri-item-hidden {
+        z-index: 0;
+    }
+    .item-content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .item .icon {
+        position: absolute;
+        color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
+        font-size: 42px;
+        margin-top: -8px;
+        margin-left: 2px;
+        text-align: center;
+    }
+
+    .item:hover .icon {
+        color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
+    }
+
+    .item .tile-label {
+        position: absolute;
+        color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
+        bottom: 0;
+        left: 2px;
+        padding: 3px;
+        z-index: 999;
+        font-size: 12px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .item:hover .tile-label {
+        color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
+    }
+
+    /* Dashboard */
+    .dashboard {
+        position: absolute;
+        width: 100%;
+        margin: 5px 0;
+        z-index: 1;
+        background: #{{ my_function('PRIMARY_COLOR') }};
+        color: #000000;
+        border-radius: 6px;
+    }
+
+    .dashboard:hover {
+        position: absolute;
+        width: 100%;
+        margin: 5px 0;
+        z-index: 1;
+        background: #{{ my_function('PRIMARY_COLOR') }};
+        color: #000000;
+        border-radius: 6px;
+    }
+
+    .dashboard-content {
+        position: relative;
+        padding: 15px;
+        background: #{{ my_function('PRIMARY_COLOR') }};
+        border-radius: 6px;
+        font-size: 17px;
+        cursor: pointer;
+        -webkit-box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
+        box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
+    }
+
+    .icon-buffer {
+        margin-right:0px;
+    }
+
+    .dashboard.muuri-item-dragging {
+        z-index: 3;
+    }
+
+    .dashboard.muuri-item-releasing {
+        z-index: 2;
+    }
+
+    .dashboard.muuri-item-hidden {
+        z-index: 0;
+    }
+
+    a {
+        color: #{{ my_function('PRIMARY_TEXT_COLOR') }};
+    }
+    a:hover {
+        color: #{{ my_function('SECONDARY_TEXT_COLOR') }};
+    }
 </style>
