--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
 	        <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet" type="text/css"/>
 			<link href="{{ asset('assets/plugins/select2/css/select2.css') }}" rel="stylesheet" type="text/css" />
 			<link href="{{ asset('assets/plugins/select2/css/select2-bootstrap4.css') }}" rel="stylesheet" type="text/css"/>
+			<link href="{{ asset('assets/plugins/datatables/dataTables.bootstrap4.min.css') }}" rel="stylesheet" type="text/css"/>
+			<link href="{{ asset('assets/plugins/datatables/buttons.bootstrap4.min.css') }}" rel="stylesheet" type="text/css"/>
 
 	        <script src="{{ asset('assets/js/modernizr.min.js' ) }}"></script>
 
@@ -138,6 +140,8 @@
 			<script src="{{ asset('assets/js/hammer.min.js') }}"></script>
 			<script src="{{ asset('assets/js/muuri.js') }}"></script>
 			<script type="text/javascript" src="{{ asset('assets/plugins/select2/js/select2.min.js') }}"></script>
+			<script src="{{ asset('assets/plugins/datatables/jquery.dataTables.min.js') }}"></script>
+			<script src="{{ asset('assets/plugins/datatables/dataTables.bootstrap4.min.js') }}"></script>
 
 			<script>
 			 
